{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 27,
  "lineage": "ed3892ef-3561-134c-ce8b-936b59b16e64",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591677451262:security-group/sg-03f4a5c24108e4e4c",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f4a5c24108e4e4c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "591677451262",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-06955f04b6b803454"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ecad1c39773fb699",
            "arn": "arn:aws:ec2:us-east-1:591677451262:elastic-ip/eipalloc-0ecad1c39773fb699",
            "domain": "vpc",
            "id": "eipalloc-0ecad1c39773fb699",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-167-250-145.compute-1.amazonaws.com",
            "public_ip": "54.167.250.145",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591677451262:internet-gateway/igw-0a6823bbceee3d92e",
            "id": "igw-0a6823bbceee3d92e",
            "owner_id": "591677451262",
            "tags": {
              "Name": "eks-igw"
            },
            "tags_all": {
              "Name": "eks-igw"
            },
            "vpc_id": "vpc-06955f04b6b803454"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "eks_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ecad1c39773fb699",
            "association_id": "eipassoc-0f59a4eea26642588",
            "connectivity_type": "public",
            "id": "nat-0de311553d70cd3ce",
            "network_interface_id": "eni-0d4d7c2a714dd3cc9",
            "private_ip": "10.0.22.10",
            "public_ip": "54.167.250.145",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08e6dbac3dd908221"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.eks-public_subnet1",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-eks-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591677451262:route-table/rtb-0a1f77a33ab7fcf6a",
            "id": "rtb-0a1f77a33ab7fcf6a",
            "owner_id": "591677451262",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0de311553d70cd3ce",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-eks-route"
            },
            "tags_all": {
              "Name": "private-eks-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-06955f04b6b803454"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.eks_nat",
            "aws_subnet.eks-public_subnet1",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-eks-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591677451262:route-table/rtb-0620df9b65a1a8f46",
            "id": "rtb-0620df9b65a1a8f46",
            "owner_id": "591677451262",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a6823bbceee3d92e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-eks-route"
            },
            "tags_all": {
              "Name": "public-eks-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-06955f04b6b803454"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.eks-igw",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTA1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0681906296c04b695",
            "route_table_id": "rtb-0620df9b65a1a8f46",
            "subnet_id": "subnet-08e6dbac3dd908221"
          },
          "dependencies": [
            "aws_internet_gateway.eks-igw",
            "aws_route_table.public-eks-route",
            "aws_subnet.eks-public_subnet1",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTA2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aca02a65c41ec6dd",
            "route_table_id": "rtb-0620df9b65a1a8f46",
            "subnet_id": "subnet-017afca6fabd8c446"
          },
          "dependencies": [
            "aws_internet_gateway.eks-igw",
            "aws_route_table.public-eks-route",
            "aws_subnet.eks-public_subnet2",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTA3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088671c3ac5885f29",
            "route_table_id": "rtb-0a1f77a33ab7fcf6a",
            "subnet_id": "subnet-0eaafe2fb00464223"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.eks_nat",
            "aws_route_table.private-eks-route",
            "aws_subnet.eks-public_subnet1",
            "aws_subnet.eks_private_subnet1",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTA4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0328e8cfb9abdad14",
            "route_table_id": "rtb-0a1f77a33ab7fcf6a",
            "subnet_id": "subnet-0961a42a424a04a28"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.eks_nat",
            "aws_route_table.private-eks-route",
            "aws_subnet.eks-public_subnet1",
            "aws_subnet.eks_private_subnet2",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks-public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591677451262:subnet/subnet-08e6dbac3dd908221",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e6dbac3dd908221",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "591677451262",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-public_subnet1"
            },
            "tags_all": {
              "Name": "eks-public_subnet1"
            },
            "vpc_id": "vpc-06955f04b6b803454"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks-public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591677451262:subnet/subnet-017afca6fabd8c446",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.32.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017afca6fabd8c446",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "591677451262",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-public_subnet2"
            },
            "tags_all": {
              "Name": "eks-public_subnet2"
            },
            "vpc_id": "vpc-06955f04b6b803454"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591677451262:subnet/subnet-0eaafe2fb00464223",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.64.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eaafe2fb00464223",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "591677451262",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks_private_subnet1"
            },
            "tags_all": {
              "Name": "eks_private_subnet1"
            },
            "vpc_id": "vpc-06955f04b6b803454"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591677451262:subnet/subnet-0961a42a424a04a28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.96.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0961a42a424a04a28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "591677451262",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks_private_subnet2"
            },
            "tags_all": {
              "Name": "eks_private_subnet2"
            },
            "vpc_id": "vpc-06955f04b6b803454"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:591677451262:vpc/vpc-06955f04b6b803454",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-088ab34a8ecdd6b7e",
            "default_route_table_id": "rtb-06c41f6da1497df23",
            "default_security_group_id": "sg-03f4a5c24108e4e4c",
            "dhcp_options_id": "dopt-0632b207d69ed3cb5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06955f04b6b803454",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06c41f6da1497df23",
            "owner_id": "591677451262"
          }
        }
      ]
    }
  ]
}